--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body{
   background-color: var(--neutral-violetDD);
   position: absolute;
   width: 100vw;
-  height: calc(100vh - 78.875px);
+  height: calc(100% - 78.875px);
   right: 0;
   bottom: 0;
   background-image: url(./images/bg-pattern-mobile-nav.svg);
@@ -37,9 +37,7 @@ body{
   background-color: var(--neutral-violetDD);
   position: absolute;
   width: 30vw;
-  height: calc(100vh - 78.875px);
-  height: -webkit-calc(100vh - 78.875px);
-  height: -moz-calc(100vh - 78.875px);
+  height: calc(100% - 78.875px);
   right: 140%;
   bottom: 0;
   background-image: url(./images/bg-pattern-mobile-nav.svg);
