--- a/styles.css
+++ b/styles.css
@@ -14,18 +14,18 @@
 body{
   font-size: 16px;
 }
-.header{
-}
 .container__header{
-  
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
   box-sizing: border-box;
+  background-color: #fff;
 }
 .nav-active{
   background-color: var(--neutral-violetDD);
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: calc(100% - 78.875px);
   right: 0;
@@ -35,13 +35,17 @@ body{
   background-position: 0 100%;
   background-size: 100% 40%;
   transition: all 1s;
+  visibility: visible;
+  opacity: 1;
 }
 .nav-deactive{
+  opacity: 0;
   background-color: var(--neutral-violetDD);
   position: absolute;
-  width: 30vw;
-  height: calc(100% - 78.875px);
-  right: 140%;
+  width: 100vw;
+  height: 100vh;
+  right: 0;
+  visibility: hidden;
   bottom: 0;
   background-image: url(./images/bg-pattern-mobile-nav.svg);
   background-repeat: no-repeat;
