--- a/styles.css
+++ b/styles.css
@@ -87,5 +87,43 @@ body{
   outline: 1px solid white;
 }
 .image{
-  width: 100%;
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
+.header-info{
+  background-color: var(--primary-violet);
+  padding: 80px 45px;
+  background-image: url(./images/bg-pattern-intro-left-mobile.svg);
+  background-repeat: no-repeat;
+  background-size: 50% 45%;
+}
+.header__subtitle{
+  font-family: var(--font-heading);
+  font-weight: 400;
+  font-size: 2.5em;
+  text-align: center;
+  color: var(--neutral-grayish);
+  margin: 0%;
+}
+.header__text{
+  font-family: var(--font-body);
+  font-weight: 400;
+  line-height: 1.4em;
+  font-size: .9em;
+  text-align: center;
+  color: var(--neutral-grayish);
+  margin-bottom: 20px;
+}
+.header__btn{
+  text-align: center;
+  margin: auto;
+  width: 150px;
+  font-family: var(--font-body);
+  text-transform: uppercase;
+  padding: 10px 7px;
+  border: 1px solid #fff;
+  text-decoration: none;
+  color: #fff;
+  display: block;
 }
