--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,19 @@
 body{
   font-size: 16px;
 }
+.header{
+  position: relative;
+}
 .container__header{
-  position: sticky;
+  position: fixed;
+  width: 100vw;
   top: 0;
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
   box-sizing: border-box;
   background-color: #fff;
+  z-index: 100;
 }
 .nav-active{
   background-color: var(--neutral-violetDD);
@@ -37,6 +42,9 @@ body{
   transition: all 1s;
   visibility: visible;
   opacity: 1;
+  padding: 40px;
+  box-sizing: border-box;
+  z-index: 100;
 }
 .nav-deactive{
   opacity: 0;
@@ -53,6 +61,9 @@ body{
   background-size: 100% 40%;
   transition: all 1s;
   overflow: hidden;
+  padding: 40px;
+  box-sizing: border-box;
+  z-index: 100;
 }
 .menu-open{
   content: url(./images/icon-hamburger.svg);
@@ -109,11 +120,11 @@ body{
 .header__text{
   font-family: var(--font-body);
   font-weight: 400;
-  line-height: 1.4em;
+  line-height: 1.5em;
   font-size: .9em;
   text-align: center;
   color: var(--neutral-grayish);
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 .header__btn{
   text-align: center;
@@ -126,4 +137,24 @@ body{
   text-decoration: none;
   color: #fff;
   display: block;
+}
+.image-2{
+  position: absolute;
+  right: 0;
+  bottom: -20%;
+  width: 120px;
+}
+
+/* Main */
+.main{
+  padding-top: 120px;
+}
+.line{
+  width: 40%;
+}
+.article__subtitle{
+  font-family: var(--font-heading);
+  font-weight: 400;
+  text-align: center;
+  font-size: 2.8em;
 }
