--- a/styles.css
+++ b/styles.css
@@ -209,3 +209,46 @@ body{
   border: 1px solid #fff;
   padding: 10px;
 }
+
+/* Footer */
+.footer{
+  background-color: var(--neutral-grayish);
+  padding: 50px 0;
+  background-image: url(./images/bg-pattern-footer-mobile.svg);
+  background-repeat: no-repeat;
+}
+.footer__title{
+  text-align: center;
+}
+.footer-icons{
+  padding: 0 25%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 50px;
+}
+.footer__subtitle{
+  font-family: var(--font-body);
+  font-size: 1.2em;
+  font-weight: 400;
+  color: var(--primary-violet);
+  text-align: center;
+  margin-bottom: 40px;
+}
+.footer__link{
+  font-family: var(--font-body);
+  font-weight: 700;
+  font-size: 1.1em;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 20px;
+  color: black;
+}
+.footer-links{
+  margin-bottom: 40px;
+}
+.footer__line{
+  width: 90%;
+  background-color: var(--primary-violet);
+  margin-bottom: 40px;
+}
